# mcp-amundsen

./: .env.example  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  __init__.py  docker-compose.yml  main.py  mcp_settings.json  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml
mcp_amundsen/: clients.py  errors.py  main.py  processors.py
scripts/: amundsen-mcp-docker-image.groovy
tests/: test_main.py  test_processors.py
