[project]
name = "mcp-amundsen"
version = "0.1.0"
description = "An MCP server that exposes Amundsen data discovery APIs as LLM-callable tools"
readme = "README.md"
license = {text = "MIT"}
authors = [
  {name = "Vidio"}
]
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.13.0",
  "sse-starlette>=2.2.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.2",
  "pytest-mock>=3.14.0",
]

[project.urls]
Repository = "https://github.com/rafifas/mcp-amundsen"


[tool.ruff]
target-version = "py310"
line-length = 120
